--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <header class="header">
     <div class="header__container container">
-      <a href="#" class="header__logo logo link-reset" tabindex="-1">Logo сайта</a>
+      <a href="#" class="header__logo logo link-reset" tabindex="-1">Logo NFT HandMade</a>
       <nav class="header__menu">
         <ul class="header__menu-list list-reset">
           <li class="header__menu-item">
@@ -78,15 +78,47 @@
   </header>
   <main class="main">
     <section class="promo">
-      <div class="promo__container container">
+      <!-- <div class="promo__container container">
         <div class="promo-content">
           <h1 class="promo__title margin-reset">NFT Xand Made&nbsp;&mdash; сувениры, созданные особенными людьми</h1>
-          <p class="promo__descr margin-reset">Кратий слоган.
-            Купив NFT напишите нам свой адрес, мы вышлем вам оригинал в любую точку мира.</p>
+          <h1 class="promo__title margin-reset">Добро пожаловать в&nbsp;NFT&nbsp;&mdash; HandMade&nbsp;&mdash; уникальный магазин на&nbsp;OpenSea</h1>
+          <p class="promo__descr margin-reset">Крупнейший маркетплейс невзаимозаменяемых токенов (NFT), работающий на&nbsp;блокчейне Ethereum. Здесь вы&nbsp;можете не&nbsp;только приобрести крутой сувенир ручной работы в&nbsp;виде деревянного bitcoin, но&nbsp;и&nbsp;помочь людям с&nbsp;ограниченными возможностями. Ведь все изделия, представленные в&nbsp;данном разделе, сделаны их&nbsp;талантливыми руками.</p>
+          <a href="#" target="_blank" class="promo__btn btn link-reset">Купить на OpenSea</a>
+        </div>
+        <img src="img/wooden-bicoint.png" alt="деревянный биткоин" class="promo__img">
+      </div> -->
+      <div class="promo__container container">
+        <div class="promo-content">
+          <h1 class="promo__title margin-reset">Добро пожаловать в&nbsp;NFT HandMade&nbsp;&mdash; уникальный магазин на OpenSea</h1>
+          <p class="promo__descr margin-reset">Здесь вы&nbsp;можете не&nbsp;только приобрести крутой сувенир ручной работы, но&nbsp;и&nbsp;помочь людям с&nbsp;ограниченными возможностями. Ведь все изделия, сделаны их&nbsp;талантливыми руками.
+          <span class="promo__span accent-text">Купив NFT-произведение, напишите нам и мы&nbsp;вышлем вам оригинал в&nbsp;любую точку мира.</span>
+          </p>
+          <a href="#" target="_blank" class="promo__btn--primary promo__btn btn link-reset">Написать нам</a>
           <a href="#" target="_blank" class="promo__btn btn link-reset">Купить на OpenSea</a>
         </div>
         <!-- <img src="http://placehold.it/400x600" alt="деревянный биткоин" class="promo__img"> -->
         <img src="img/wooden-bicoint.png" alt="деревянный биткоин" class="promo__img">
+      </div>
+    </section>
+    <section class="ntf">
+      <div class="ntf__conainer container">
+        <h2 class="ntf__title section-title margin-reset">NFT и криптоискусство HandMade</h2>
+        <p class="ntf__descr section-descr margin-reset">
+          Проект &laquo;Алтай Без Ограничений&raquo; помогает людям с&nbsp;ограниченными возможностями здоровья (ОВЗ) реализовать себя в&nbsp;криптоискусстве и&nbsp;повышать качество своей жизни. Мы&nbsp;сотрудничаем с&nbsp;инвалидами по&nbsp;зрению, по&nbsp;слуху, с&nbsp;семьями, имеющими детей с&nbsp;ментальными нарушениями. Верим, что особенные люди по-особенному талантливые!
+        </p>
+        <p class="ntf__descr section-descr margin-reset">
+          <span>Особая мастерская</span>
+          Это образовательная площадка, на&nbsp;которой работают социальные проекты с&nbsp;людьми с&nbsp;ОВЗ, где учат и&nbsp;учатся творчеству. Здесь происходит коллаборация разных творческих личностей, любого возраста и&nbsp;статуса&nbsp;&mdash; художников, дизайнеров, мастеров и&nbsp;новичков. Одни вырезают из&nbsp;дерева, другие делают сувениры из&nbsp;глины, третьи пишут картины или делают всевозможные украшения.
+        </p>
+        <p class="ntf__descr section-descr margin-reset">
+          <span>Помочь может каждый</span>
+          Не&nbsp;нужно быть миллионером, чтобы помогать людям, которым повезло в&nbsp;плане здоровья намного меньше, чем вам. &laquo;Алтай Без Ограничений&raquo; позволяет легко монетизировать цифровое искусство и&nbsp;NFT Hand Made, делает благотворительность доступной и&nbsp;простой для всех пользователей Интернета. NFT-произведения людей с&nbsp;ограниченными возможностями можно купить прямо здесь и&nbsp;сейчас. Такой формат помощи дает инвалидам возможность не&nbsp;только заниматься творчеством, но&nbsp;и&nbsp;получить статус трудящихся.
+        </p>
+        <p class="ntf__descr section-descr margin-reset">
+          <span>NFT искусство, созданное особенными людьми</span>
+          Наша мастерская NFT Hand Made&nbsp;&mdash; это не&nbsp;резервация для талантливых инвалидов. Это способ социализации, адаптации и&nbsp;встраивания людей с&nbsp;ОВЗ в&nbsp;общество. Маленький, но&nbsp;очень нужный шаг к&nbsp;созданию инклюзивной среды.
+          Купив NFT-произведение, напишите нам altaibezogranichenj@gmail.com и&nbsp;оставьте свой адрес, мы&nbsp;вышлем вам оригинал в&nbsp;любую точку мира.
+        </p>
       </div>
     </section>
     <section class="section">
@@ -96,7 +128,7 @@
         <p class="section__descr section-descr margin-reset">Кратое описание Далеко-далеко за словесными горами в стране гласных, и согласных живут рыбные тексты. Своих безопасную приставка точках, океана выйти переписали снова несколько свой. </p>
         <ul class="section__list list-reset">
           <li class="section__item card">
-            <img class="card__image" src="http://placehold.it/310x236" alt="" aria-hidden="true" width="100%" height="236">
+            <img class="card__image" src="http://placehold.it/300x236" alt="" aria-hidden="true" width="100%" height="236">
             <div class="card__content">
               <h3 class="card__title margin-reset">Наименовние сувенира</h3>
               <p class="card__price margin-reset">
@@ -110,7 +142,7 @@
             </div>
           </li>
           <li class="section__item card">
-            <img class="card__image" src="http://placehold.it/310x236" alt="" aria-hidden="true" width="100%" height="236">
+            <img class="card__image" src="http://placehold.it/300x236" alt="" aria-hidden="true" width="100%" height="236">
             <div class="card__content">
               <h3 class="card__title margin-reset">Наименовние сувенира</h3>
               <p class="card__price margin-reset">
@@ -124,7 +156,21 @@
             </div>
           </li>
           <li class="section__item card">
-            <img class="card__image" src="http://placehold.it/310x236" alt="" width="100%" height="236">
+            <img class="card__image" src="http://placehold.it/300x236" alt="" width="100%" height="236">
+            <div class="card__content">
+              <h3 class="card__title margin-reset">Наименовние сувенира</h3>
+              <p class="card__price margin-reset">
+                <span class="card__price-value">3000</span>
+                <span class="card__price-unit">₽</span>
+              </p>
+              <div class="card__links">
+                <a href="#" class="card__btn--primary card__btn btn link-reset">Подробнее</a>
+                <a href="#" class="card__btn btn link-reset">Купить</a>
+              </div>
+            </div>
+          </li>
+          <li class="section__item card">
+            <img class="card__image" src="http://placehold.it/300x236" alt="" width="100%" height="236">
             <div class="card__content">
               <h3 class="card__title margin-reset">Наименовние сувенира</h3>
               <p class="card__price margin-reset">
@@ -140,7 +186,7 @@
         </ul>
         <div class="modals">
           <div class="modals__overlay">
-            <p class="test-ex" style="margin-bottom: 16px; font-size: 24px; color: grey; text-align: center;">Пример раскрытия карточки по нажанию "Перейти"</p>
+            <p class="test-ex" style="margin-bottom: 16px; font-size: 24px; color: grey; text-align: center;">Пример раскрытия карточки по нажанию "Подробнее"</p>
             <ul class="modal__list list-reset">
               <li class="modal__item" data-target="modal__card">
                 <button class="modal__btn-close btn-reset"></button>
@@ -154,9 +200,28 @@
                   <p class="modal__descr margin-reset">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum, aliquid eius. Neque, culpa? Nesciunt voluptatibus hic corrupti ullam repellat velit!</p>
                   <a href="#" class="modal__btn btn link-reset">Купить на OpenSea</a>
                 </div>
-
               </li>
             </ul>
+            <!-- <p class="test-ex" style="margin-bottom: 16px; font-size: 24px; color: grey; text-align: center;">Пример формы обратной связи по нажанию "Написать нам"</p>
+            <div class="modal" data-target="modal__form">
+              <form class="form" action="mail.php" method="post" enctype="multipart/form-data">
+                <button class="btn-reset btn-close" aria-label="Закрыть" type="button">
+                  <svg  width="24" height="24">
+                    <use xlink:href="img/sprite.svg#icon-close"></use>
+                  </svg>
+                </button>
+                <label for="name" class="form__label">
+                  <input class="form__input margin-reset" type="text" data-validate-field="name" name="name" id="name" placeholder="Ваше имя">
+                </label>
+                <label for="name" class="form__label">
+                  <input class="form__input margin-reset" type="text" data-validate-field="uniquecode" name="uniquecode" id="uniquecode" placeholder="Ваш код NTF-сувенира">
+                </label>
+                <label for="name" class="form__label">
+                  <input class="form__input margin-reset" type="text" data-validate-field="address" name="address" id="address" placeholder="Почтовый адрес">
+                </label>
+                <button class="promo__btn btn btn-reset btn-submit" type="submit">Отправить</button>
+              </form>
+            </div> -->
           </div>
 
         </div>
