files section promo and ntf

--- a/index.html
+++ b/index.html
@@ -13,112 +13,106 @@
 <body>
   <header class="header">
     <div class="header__container container">
-      <a href="#" class="header__logo logo link-reset" tabindex="-1">Logo NFT HandMade</a>
+      <a href="#" class="header__logo logo link-reset" tabindex="-1">
+        <svg class="logo__icon" width="177" height="54">
+          <use xlink:href="img/sprite.svg#logo"></use>
+        </svg>
+      </a>
+      <ul class="header__list list-reset">
+        <li class="header__item">
+          <a href="#" class="hader__link link link-reset">Помоги ближнему</a>
+        </li>
+        <li class="header__item">
+          <a href="#" class="hader__link link link-reset">Алтай без ограничений</a>
+        </li>
+      </ul>
       <nav class="header__menu">
         <ul class="header__menu-list list-reset">
-          <li class="header__menu-item">
-            <a href="#" class="hader__menu-link link link-reset">Помоги ближнему</a>
+          <!-- <li class="header__menu-item">
+            <a href="#" class="hader__menu-link link link-reset">NTF искусство</a>
           </li>
           <li class="header__menu-item">
-            <a href="#" class="hader__menu-link link link-reset">Алтай без ограничений</a>
+            <a href="#" class="hader__menu-link link link-reset">Мастерские</a>
+          </li>
+          <li class="header__menu-item">
+            <a href="#" class="hader__menu-link link link-reset">О нас</a>
+          </li> -->
+          <li class="header__menu-item">
+            <a href="#" class="hader__menu-link link link-reset">Контакты</a>
           </li>
         </ul>
       </nav>
-      <ul class="header__social-list list-reset">
-        <li class="header__social-item">
-          <a href="#" target="_blank" class="header__social-link link link-reset" aria-label="Перейти на нашу страницу в facebook">
-            <svg class="header__social-icon" width="24" height="24">
-              <use xlink:href="img/sprite.svg#facebook"></use>
-            </svg>
-            <!-- <span class="header__social-text">Facebook</span> -->
-          </a>
-        </li>
-        <li class="header__social-item">
-          <a href="#" target="_blank" class="header__social-link link link-reset" aria-label="Перейти на нашу страницу в twitter">
-            <svg class="header__social-icon" width="24" height="24">
-              <use xlink:href="img/sprite.svg#twitter"></use>
-            </svg>
-            <!-- <span class="header__social-text">Twitter</span> -->
-          </a>
-        </li>
-        <li class="header__social-item">
-          <a href="#" target="_blank" class="header__social-link link link-reset" aria-label="Перейти на нашу страницу в instagram">
-            <svg class="header__social-icon" width="24" height="24">
-              <use xlink:href="img/sprite.svg#instagram"></use>
-            </svg>
-            <!-- <span class="header__social-text">Instagram</span> -->
-          </a>
-        </li>
-        <li class="header__social-item">
-          <a href="#" target="_blank" class="header__social-link link link-reset" aria-label="Перейти на нашу страницу в ВКонтакте">
-            <svg class="header__social-icon" width="24" height="24">
-              <use xlink:href="img/sprite.svg#vk"></use>
-            </svg>
-            <!-- <span class="header__social-text">ВКонтакте</span> -->
-          </a>
-        </li>
-        <li class="header__social-item">
-          <a href="#" target="_blank" class="header__social-link link link-reset" aria-label="Перейти на наш канал на youtube">
-            <svg class="header__social-icon" width="24" height="24">
-              <use xlink:href="img/sprite.svg#youtube"></use>
-            </svg>
-            <!-- <span class="header__social-text">Youtube</span> -->
-          </a>
-        </li>
-        <li class="header__social-item">
-          <a href="#" target="_blank" class="header__social-link link link-reset" aria-label="telegram">
-            <svg class="header__social-icon" width="24" height="24">
-              <use xlink:href="img/sprite.svg#telegram"></use>
-            </svg>
-            <!-- <span class="header__social-text">Telegram</span> -->
-          </a>
-        </li>
-      </ul>
+      <button class="header__btn btn-reset"><span class="btn-disable">En/</span>Ru</button>
     </div>
   </header>
   <main class="main">
-    <section class="promo">
-      <!-- <div class="promo__container container">
-        <div class="promo-content">
-          <h1 class="promo__title margin-reset">NFT Xand Made&nbsp;&mdash; сувениры, созданные особенными людьми</h1>
-          <h1 class="promo__title margin-reset">Добро пожаловать в&nbsp;NFT&nbsp;&mdash; HandMade&nbsp;&mdash; уникальный магазин на&nbsp;OpenSea</h1>
-          <p class="promo__descr margin-reset">Крупнейший маркетплейс невзаимозаменяемых токенов (NFT), работающий на&nbsp;блокчейне Ethereum. Здесь вы&nbsp;можете не&nbsp;только приобрести крутой сувенир ручной работы в&nbsp;виде деревянного bitcoin, но&nbsp;и&nbsp;помочь людям с&nbsp;ограниченными возможностями. Ведь все изделия, представленные в&nbsp;данном разделе, сделаны их&nbsp;талантливыми руками.</p>
-          <a href="#" target="_blank" class="promo__btn btn link-reset">Купить на OpenSea</a>
-        </div>
-        <img src="img/wooden-bicoint.png" alt="деревянный биткоин" class="promo__img">
-      </div> -->
+    <section class="promo section-ofset">
       <div class="promo__container container">
         <div class="promo-content">
-          <h1 class="promo__title margin-reset">Добро пожаловать в&nbsp;NFT HandMade&nbsp;&mdash; уникальный магазин на OpenSea</h1>
-          <p class="promo__descr margin-reset">Здесь вы&nbsp;можете не&nbsp;только приобрести крутой сувенир ручной работы, но&nbsp;и&nbsp;помочь людям с&nbsp;ограниченными возможностями. Ведь все изделия, сделаны их&nbsp;талантливыми руками.
-          <span class="promo__span accent-text">Купив NFT-произведение, напишите нам и мы&nbsp;вышлем вам оригинал в&nbsp;любую точку мира.</span>
-          </p>
-          <a href="#" target="_blank" class="promo__btn--primary promo__btn btn link-reset">Написать нам</a>
-          <a href="#" target="_blank" class="promo__btn btn link-reset">Купить на OpenSea</a>
+          <h1 class="promo__title margin-reset"><span class="promo__title promo__title--ofset">Hand&nbsp;made </span>сувениры</h1>
+          <p class="promo__descr margin-reset">Добро пожаловать в&nbsp;NFT-Hand-Made&nbsp;&mdash; уникальный магазин на&nbsp;OpenSea. Здесь вы&nbsp;можете не&nbsp;только приобрести крутой сувенир ручной работы в&nbsp;виде деревянного bitcoin, но&nbsp;и&nbsp;помочь людям с&nbsp;ограниченными возможностями. Ведь все изделия, представленные в&nbsp;данном разделе, сделаны их&nbsp;талантливыми руками.</p>
+          <div class="promo__backlinks">
+            <a href="#" target="_blank" class="promo__btn btn link-reset">Пернейти в&nbsp;магазин</a>
+            <ul class="promo__social-list list-reset">
+              <li class="promo__social-item">
+                <a href="#" target="_blank" class="header__social-link link link-reset" aria-label="Перейти на нашу страницу в facebook">
+                  <svg class="promo__social-icon" width="35" height="35">
+                    <use xlink:href="img/sprite.svg#facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="promo__social-item">
+                <a href="#" target="_blank" class="promo__social-link link link-reset" aria-label="Перейти на нашу страницу в instagram">
+                  <svg class="promo__social-icon" width="35" height="35">
+                    <use xlink:href="img/sprite.svg#instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="promo__social-item">
+                <a href="#" target="_blank" class="promo__social-link link link-reset" aria-label="Перейти на нашу страницу в ВКонтакте">
+                  <svg class="promo__social-icon" width="45" height="26">
+                    <use xlink:href="img/sprite.svg#vk"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="promo__social-item">
+                <a href="#" target="_blank" class="promo__social-link link link-reset" aria-label="Перейти на нашу страницу в twitter">
+                  <svg class="promo__social-icon" width="35" height="35">
+                    <use xlink:href="img/sprite.svg#twitter"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
-        <!-- <img src="http://placehold.it/400x600" alt="деревянный биткоин" class="promo__img"> -->
         <img src="img/wooden-bicoint.png" alt="деревянный биткоин" class="promo__img">
       </div>
     </section>
-    <section class="ntf">
+    <section class="ntf section-ofset">
       <div class="ntf__conainer container">
-        <h2 class="ntf__title section-title margin-reset">NFT и криптоискусство HandMade</h2>
-        <p class="ntf__descr section-descr margin-reset">
-          Проект &laquo;Алтай Без Ограничений&raquo; помогает людям с&nbsp;ограниченными возможностями здоровья (ОВЗ) реализовать себя в&nbsp;криптоискусстве и&nbsp;повышать качество своей жизни. Мы&nbsp;сотрудничаем с&nbsp;инвалидами по&nbsp;зрению, по&nbsp;слуху, с&nbsp;семьями, имеющими детей с&nbsp;ментальными нарушениями. Верим, что особенные люди по-особенному талантливые!
-        </p>
-        <p class="ntf__descr section-descr margin-reset">
-          <span>Особая мастерская</span>
-          Это образовательная площадка, на&nbsp;которой работают социальные проекты с&nbsp;людьми с&nbsp;ОВЗ, где учат и&nbsp;учатся творчеству. Здесь происходит коллаборация разных творческих личностей, любого возраста и&nbsp;статуса&nbsp;&mdash; художников, дизайнеров, мастеров и&nbsp;новичков. Одни вырезают из&nbsp;дерева, другие делают сувениры из&nbsp;глины, третьи пишут картины или делают всевозможные украшения.
-        </p>
-        <p class="ntf__descr section-descr margin-reset">
-          <span>Помочь может каждый</span>
-          Не&nbsp;нужно быть миллионером, чтобы помогать людям, которым повезло в&nbsp;плане здоровья намного меньше, чем вам. &laquo;Алтай Без Ограничений&raquo; позволяет легко монетизировать цифровое искусство и&nbsp;NFT Hand Made, делает благотворительность доступной и&nbsp;простой для всех пользователей Интернета. NFT-произведения людей с&nbsp;ограниченными возможностями можно купить прямо здесь и&nbsp;сейчас. Такой формат помощи дает инвалидам возможность не&nbsp;только заниматься творчеством, но&nbsp;и&nbsp;получить статус трудящихся.
-        </p>
-        <p class="ntf__descr section-descr margin-reset">
-          <span>NFT искусство, созданное особенными людьми</span>
-          Наша мастерская NFT Hand Made&nbsp;&mdash; это не&nbsp;резервация для талантливых инвалидов. Это способ социализации, адаптации и&nbsp;встраивания людей с&nbsp;ОВЗ в&nbsp;общество. Маленький, но&nbsp;очень нужный шаг к&nbsp;созданию инклюзивной среды.
-          Купив NFT-произведение, напишите нам altaibezogranichenj@gmail.com и&nbsp;оставьте свой адрес, мы&nbsp;вышлем вам оригинал в&nbsp;любую точку мира.
-        </p>
+        <h2 class="ntf__title section-title margin-reset">NFT И&nbsp;КРИПТОИССКУСТВО HAND MADE</h2>
+        <ul class="ntf__list list-reset">
+          <li class="ntf__item ntf-card">
+            <img class="ntf-card__img" src="./img/svg/ntf-art-1.svg" alt="" aria-hidden="true" width="60" height="60">
+            <h3 class="ntf-card__title margin-reset">Алтай без ограничений</h3>
+            <p class="ntf-card__descr margin-reset">Проект &laquo;Алтай Без Ограничений&raquo; помогает людям с&nbsp;ограниченными возможностями здоровья (ОВЗ) реализовать себя в&nbsp;криптоискусстве и&nbsp;повышать качество своей жизни.</p>
+          </li>
+          <li class="ntf__item ntf-card">
+            <img class="ntf-card__img" src="./img/svg/ntf-art-2.svg" alt="" aria-hidden="true" width="60" height="60">
+            <h3 class="ntf-card__title margin-reset">Особая мастерская</h3>
+            <p class="ntf-card__descr margin-reset">Это образовательная площадка, на&nbsp;которой работают социальные проекты с&nbsp;людьми с&nbsp;ОВЗ, где учат и&nbsp;учатся творчеству.</p>
+          </li>
+          <li class="ntf__item ntf-card">
+            <img class="ntf-card__img" src="./img/svg/ntf-art-3.svg" alt="" aria-hidden="true" width="60" height="60">
+            <h3 class="ntf-card__title margin-reset">Помочь может каждый</h3>
+            <p class="ntf-card__descr margin-reset">NFT-произведения людей с&nbsp;ограниченными возможностями можно купить прямо здесь и&nbsp;сейчас. Такой формат помощи дает инвалидам возможность не&nbsp;только заниматься творчеством, но&nbsp;и&nbsp;получить статус трудящихся.</p>
+          </li>
+          <li class="ntf__item ntf-card">
+            <img class="ntf-card__img" src="./img/svg/ntf-art-4.svg" alt="" aria-hidden="true" width="60" height="60">
+            <h3 class="ntf-card__title margin-reset">NFT искусство</h3>
+            <p class="ntf-card__descr margin-reset">Это способ социализации, адаптации и&nbsp;встраивания людей с&nbsp;ОВЗ в&nbsp;общество. Маленький, но&nbsp;очень нужный шаг к&nbsp;созданию инклюзивной среды.</p>
+          </li>
+        </ul>
       </div>
     </section>
     <section class="section">
@@ -227,7 +221,6 @@
         </div>
       </div>
     </section>
-
   </main>
   <footer class="footer">
     <div class="container"></div>
