--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             </ul>
           </div>
         </div>
-        <img src="img/wooden-bicoint.png" alt="деревянный биткоин" class="promo__img">
+        <img class="promo__img" src="img/wooden-bicoint.png" alt="деревянный биткоин">
       </div>
     </section>
     <section class="ntf section-ofset">
