--- a/index.html
+++ b/index.html
@@ -86,7 +86,39 @@
           </div>
         </div>
         <img class="promo__img" src="img/wooden-bicoint.png" alt="деревянный биткоин">
-      </div>
+        <!-- <div class="promo__slider promo-slider">
+          <div class="promo-slider__wrapper">
+            <div class="promo-slider__slide">
+              <img class="promo__img" src="img/wooden-bicoint.png" alt="деревянный биткоин">
+            </div>
+            <div class="promo-slider__slide">
+              <img class="promo__img" src="https://swiperjs.com/demos/images/nature-2.jpg" alt="деревянный биткоин">
+            </div>
+            <div class="promo-slider__slide">
+              <img class="promo__img" src="https://swiperjs.com/demos/images/nature-3.jpg" alt="деревянный биткоин">
+            </div>
+            <div class="promo-slider__slide">
+              <img class="promo__img" src="https://swiperjs.com/demos/images/nature-4.jpg" alt="деревянный биткоин">
+            </div>
+          </div>
+        </div>
+        <div thumbsSlider="" class="promo__slider promo-slider">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <img src="https://swiperjs.com/demos/images/nature-1.jpg" />
+            </div>
+            <div class="swiper-slide">
+              <img src="https://swiperjs.com/demos/images/nature-2.jpg" />
+            </div>
+            <div class="swiper-slide">
+              <img src="https://swiperjs.com/demos/images/nature-3.jpg" />
+            </div>
+            <div class="swiper-slide">
+              <img src="https://swiperjs.com/demos/images/nature-4.jpg" />
+            </div>
+          </div>
+        </div>
+      </div> -->
     </section>
     <section class="ntf section-ofset">
       <div class="ntf__conainer container">
