--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
           <use xlink:href="img/sprite.svg#logo"></use>
         </svg>
       </a>
-      <ul class="header__list list-reset">
+      <!-- <ul class="header__list list-reset">
         <li class="header__item">
           <a href="#" class="hader__link link link-reset">Помоги ближнему</a>
         </li>
         <li class="header__item">
           <a href="#" class="hader__link link link-reset">Алтай без ограничений</a>
         </li>
-      </ul>
+      </ul> -->
       <nav class="header__menu">
         <ul class="header__menu-list list-reset">
-          <!-- <li class="header__menu-item">
+          <li class="header__menu-item">
             <a href="#" class="hader__menu-link link link-reset">NTF искусство</a>
           </li>
           <li class="header__menu-item">
@@ -36,7 +36,7 @@
           </li>
           <li class="header__menu-item">
             <a href="#" class="hader__menu-link link link-reset">О нас</a>
-          </li> -->
+          </li>
           <li class="header__menu-item">
             <a href="#" class="hader__menu-link link link-reset">Контакты</a>
           </li>
