--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <nav class="header__menu">
         <ul class="header__menu-list list-reset">
           <li class="header__menu-item">
-            <a href="#" class="hader__menu-link link link-reset">NTF искусство</a>
+            <a href="#" class="hader__menu-link link link-reset">NFT искусство</a>
           </li>
           <li class="header__menu-item">
             <a href="#" class="hader__menu-link link link-reset">Мастерские</a>
@@ -49,7 +49,7 @@
     <section class="promo section-ofset">
       <div class="promo__container container">
         <div class="promo-content">
-          <h1 class="promo__title margin-reset"><span class="promo__title promo__title--ofset">Hand&nbsp;made </span>сувениры</h1>
+          <h1 class="promo__title margin-reset"><span class="promo__title promo__title--ofset">Hand&nbsp;Made </span>сувениры</h1>
           <p class="promo__descr margin-reset">Добро пожаловать в&nbsp;NFT-Hand-Made&nbsp;&mdash; уникальный магазин на&nbsp;OpenSea. Здесь вы&nbsp;можете не&nbsp;только приобрести крутой сувенир ручной работы в&nbsp;виде деревянного bitcoin, но&nbsp;и&nbsp;помочь людям с&nbsp;ограниченными возможностями. Ведь все изделия, представленные в&nbsp;данном разделе, сделаны их&nbsp;талантливыми руками.</p>
           <div class="promo__backlinks">
             <a href="#" target="_blank" class="promo__btn btn link-reset">Пернейти в&nbsp;магазин</a>
@@ -117,30 +117,30 @@
               <img src="https://swiperjs.com/demos/images/nature-4.jpg" />
             </div>
           </div>
-        </div>
-      </div> -->
+        </div> -->
+      </div>
     </section>
     <section class="ntf section-ofset">
       <div class="ntf__conainer container">
         <h2 class="ntf__title section-title margin-reset">NFT И&nbsp;КРИПТОИССКУСТВО HAND MADE</h2>
         <ul class="ntf__list list-reset">
           <li class="ntf__item ntf-card">
-            <img class="ntf-card__img" src="./img/svg/ntf-art-1.svg" alt="" aria-hidden="true" width="60" height="60">
+            <img class="ntf-card__img" src="./img/svg/ntf-art-1.svg" alt="" aria-hidden="true" width="50" height="50">
             <h3 class="ntf-card__title margin-reset">Алтай без ограничений</h3>
             <p class="ntf-card__descr margin-reset">Проект &laquo;Алтай Без Ограничений&raquo; помогает людям с&nbsp;ограниченными возможностями здоровья (ОВЗ) реализовать себя в&nbsp;криптоискусстве и&nbsp;повышать качество своей жизни.</p>
           </li>
           <li class="ntf__item ntf-card">
-            <img class="ntf-card__img" src="./img/svg/ntf-art-2.svg" alt="" aria-hidden="true" width="60" height="60">
+            <img class="ntf-card__img" src="./img/svg/ntf-art-2.svg" alt="" aria-hidden="true" width="50" height="50">
             <h3 class="ntf-card__title margin-reset">Особая мастерская</h3>
             <p class="ntf-card__descr margin-reset">Это образовательная площадка, на&nbsp;которой работают социальные проекты с&nbsp;людьми с&nbsp;ОВЗ, где учат и&nbsp;учатся творчеству.</p>
           </li>
           <li class="ntf__item ntf-card">
-            <img class="ntf-card__img" src="./img/svg/ntf-art-3.svg" alt="" aria-hidden="true" width="60" height="60">
+            <img class="ntf-card__img" src="./img/svg/ntf-art-3.svg" alt="" aria-hidden="true" width="50" height="50">
             <h3 class="ntf-card__title margin-reset">Помочь может каждый</h3>
             <p class="ntf-card__descr margin-reset">NFT-произведения людей с&nbsp;ограниченными возможностями можно купить прямо здесь и&nbsp;сейчас. Такой формат помощи дает инвалидам возможность не&nbsp;только заниматься творчеством, но&nbsp;и&nbsp;получить статус трудящихся.</p>
           </li>
           <li class="ntf__item ntf-card">
-            <img class="ntf-card__img" src="./img/svg/ntf-art-4.svg" alt="" aria-hidden="true" width="60" height="60">
+            <img class="ntf-card__img" src="./img/svg/ntf-art-4.svg" alt="" aria-hidden="true" width="50" height="50">
             <h3 class="ntf-card__title margin-reset">NFT искусство</h3>
             <p class="ntf-card__descr margin-reset">Это способ социализации, адаптации и&nbsp;встраивания людей с&nbsp;ОВЗ в&nbsp;общество. Маленький, но&nbsp;очень нужный шаг к&nbsp;созданию инклюзивной среды.</p>
           </li>
